Updating Old File for core commit 98452ba81d71db65c75e3d07712eefa18c003f53

--- a/help/home/c-release-notes-insight/c-6-3/c-6-3.md
+++ b/help/home/c-release-notes-insight/c-6-3/c-6-3.md
@@ -1,36 +1,39 @@
 ---
-description: As notas de versão do Análise de big data 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
-title: Notas de versão do Análise de big data 6.3
+description: As notas de versão da Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+title: Notas de versão do Data Workbench 6.3
 uuid: a8db4c11-f821-4d14-90d4-5194e58c50c1
 translation-type: tm+mt
-source-git-commit: 27600561841db3705f4eee6ff0aeb8890444bbc9
+source-git-commit: 98452ba81d71db65c75e3d07712eefa18c003f53
+workflow-type: tm+mt
+source-wordcount: '1687'
+ht-degree: 6%
 
 ---
 
 
-# Notas de versão do Análise de big data 6.3{#data-workbench-release-notes}
+# Notas de versão do Data Workbench 6.3{#data-workbench-release-notes}
 
-As notas de versão do Análise de big data 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
+As notas de versão da Data Workbench 6.3 incluem novos recursos, requisitos de atualização, bugs corrigidos e problemas conhecidos.
 
-## Novos Recursos {#section-1225066ea8f44cf68e42e019d0bca816}
+## Novos recursos {#section-1225066ea8f44cf68e42e019d0bca816}
 
-A análise de big data 6.3 inclui os seguintes novos recursos:
+A Data Workbench 6.3 inclui estes novos recursos:
 
 <table id="table_E28A6D31E7D941F7A0C2048F0F0F7838"> 
  <thead> 
   <tr> 
-   <th colname="col1" class="entry"> Recursos  </th> 
+   <th colname="col1" class="entry"> Recursos </th> 
    <th colname="col2" class="entry"> Descrição </th> 
   </tr> 
  </thead>
  <tbody> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-attribution-profiles/c-attrib-algorithmic/c-attrib-algorithmic.md"> Atribuição de melhor ajuste </a> </td> 
-   <td colname="col2"> A Atribuição de melhor ajuste fornece uma abordagem de aprendizado de máquina para determinar os níveis variados de influência que as interações do cliente contribuem para um evento de conversão bem-sucedido e, em seguida, atribui o nível apropriado de atribuição a cada evento. A Atribuição de melhor ajuste permite avaliar os toques em uma janela de tempo antes do evento de conversão bem-sucedido ocorrer e, em seguida, emprega o algoritmo da Análise de big data para criar um modelo de atribuição com base nos dados com resultados específicos de suas campanhas de marketing e fluxo de trabalho interno. </td> 
+   <td colname="col2"> A Atribuição de melhor ajuste fornece uma abordagem de aprendizado de máquina para determinar os níveis variados de influência que as interações do cliente contribuem para um evento de conversão bem-sucedido e, em seguida, atribui o nível de atribuição apropriado a cada evento. A Atribuição de melhor ajuste permite avaliar os toques em uma janela de tempo antes do evento de conversão bem-sucedido ocorrer e, em seguida, emprega o algoritmo de Data Workbench para criar um modelo de atribuição com base nos seus dados com resultados específicos às suas campanhas de marketing e fluxo de trabalho interno. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-mmp-integration.md"> Integração com o Master Marketing Profile </a> </td> 
-   <td colname="col2"> Compartilhe segmentos ricos de clientes criados no Análise de big data na Adobe Experience Cloud. Integrating with Profiles and Audiences enables the <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> and other Adobe Analytic capabilities the opportunity to leverage rich audience segments created in Data Workbench. Isso requer que você tenha a Experience Cloud configurada e em execução. <p>A integração com a Master Experience Cloud permite que você execute recursos preditivos como agrupamento ou pontuação de propensão e, em seguida, envie segmentos para a Adobe Experience Cloud ou outros produtos maiores, como o Adobe Target e o Adobe Experience Manager. </p> </td> 
+   <td colname="col2"> Compartilhe segmentos ricos de clientes criados em Data Workbench com a Adobe Experience Cloud. Integrating with Profiles and Audiences enables the <a href="https://www.adobe.com/solutions/digital-marketing.html?promoid=KLXLZ" format="https" scope="external"> Adobe Experience Cloud </a> and other Adobe Analytic capabilities the opportunity to leverage rich audience segments created in Data Workbench. Isso requer que você tenha o Experience Cloud configurado e em execução. <p>A integração com o Experience Cloud Principal permite que você execute recursos preditivos como agrupamento ou pontuação de propensão e, em seguida, envie segmentos para o Adobe Experience Cloud ou outros produtos maiores, como Adobe Target e Adobe Experience Manager. </p> </td> 
   </tr> 
   <tr> 
    <td colname="col1"> <a href="../../../home/c-get-started/c-exp-data-seg-exp/c-segment-export.md#concept-ac18fdb34edc4b9592130ab98fabd05e"> Opções de formato para exportação de arquivo </a> </td> 
@@ -74,18 +77,18 @@ A análise de big data 6.3 inclui os seguintes novos recursos:
   </tr> 
   <tr> 
    <td colname="col1"> Atalhos de teclado </td> 
-   <td colname="col2"> Os novos atalhos de teclado no Análise de big data permitem navegar pela área de trabalho principal e por áreas de trabalho individuais usando as teclas de seta. Além disso, a barra de ferramentas do espaço de trabalho agora é exibida na janela de trabalho superior. </td> 
+   <td colname="col2"> Os novos atalhos de teclado na Data Workbench permitem navegar pela área de trabalho principal e por áreas de trabalho individuais usando as teclas de seta. Além disso, a barra de ferramentas do espaço de trabalho agora é exibida na janela de trabalho superior. </td> 
   </tr> 
   <tr> 
    <td colname="col1"> Suporte ao Windows 8.1 </td> 
-   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits <a href="https://docs.adobe.com/content/help/en/data-workbench/using/install/c-data-workbench-client-install.html" format="https" scope="external"> agora é compatível </a> com a instalação do cliente. </td> 
+   <td colname="col2"> O Microsoft Windows 8.1 de 64 bits <a href="https://docs.adobe.com/content/help/pt-BR/data-workbench/using/install/c-data-workbench-client-install.html" format="https" scope="external"> agora é compatível </a> com a instalação do cliente. </td> 
   </tr> 
  </tbody> 
 </table>
 
-## Requisitos e recomendações de atualização {#section-8704a9ac358246cd81233dd0982d534f}
+## Requisitos de atualização e Recommendations {#section-8704a9ac358246cd81233dd0982d534f}
 
-Os novos perfis para o Análise de big data estão localizados no perfil **Software e Docs** em
+Os novos perfis para Data Workbench estão localizados no perfil **Software e Documentos** em
 
 ```
 Profiles - Current\DataWorkBench\ 
@@ -98,9 +101,9 @@ Profiles - Current\DataWorkBench\
 
 >[!NOTE]
 >
->Se você tiver perfis personalizados que têm prioridade sobre os arquivos padrão fornecidos no [!DNL Base] pacote, será necessário atualizar esses arquivos personalizados:
+>Se você personalizou perfis que têm precedência sobre os arquivos padrão fornecidos no [!DNL Base] pacote, será necessário atualizar esses arquivos personalizados:
 
-* **Atualize o arquivo** Meta.cfg ( [!DNL E:\..\Profiles\<your custom profile>\Context\meta.cfg)]para definir a criptografia de senha atualizada para a Unidade do Sistema de Arquivos (servidor FSU) e adicione entradas para as transformações do campo Nomear Valor para aproveitar o Agrupamento [de Sequências de Caracteres de](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md)Consulta.
+* **Atualize o arquivo** Meta.cfg ( [!DNL E:\..\Profiles\<your custom profile>\Context\meta.cfg)]para definir a criptografia de senha atualizada para a Unidade de Sistema de Arquivos (servidor FSU) e adicione entradas para as transformações do campo Nomear Valor para aproveitar o Agrupamento [de Sequências de Caracteres de](../../../home/c-get-started/c-admin-intrf/c-query-que/c-query-string-grouping.md)Query.
 
    1. Abra o [!DNL meta.cfg] arquivo no FSU.
    1. Altere o tipo de dados para **[!UICONTROL Proxy Password]** de &quot; [!DNL string"] para &quot; [!DNL EncryptedString]&quot; na seção Configuração *da* estação de trabalho.
@@ -113,21 +116,23 @@ Profiles - Current\DataWorkBench\
 
    1. Adicione novas entradas para ativar as novas transformações do campo Nomear valor: *BuildNameValuePair* e *ExtractNameValuePairs*.
 
-      Abra um espaço de trabalho e clique com o botão direito do mouse em **Admin** > Gerenciador **** de perfis.
+      Abra um espaço de trabalho e clique com o botão direito do mouse em **Admin** > Gerenciador **de** Perfis.
 
       Em **Contexto**, clique no arquivo **meta.cfg** na coluna **Base** e clique em **Tornar local**. Na coluna Tabela do usuário, clique com o botão direito do mouse e selecione **Abrir** > **na estação de trabalho**.
 
       ![](assets/meta_cfg.png)
 
       * Na nova janela, clique em **metadados** e adicione modelos filhos aceitáveis.
+
       ![](assets/meta_cfg_child.png)
 
       * Abra a **transformação** e adicione novos modelos.
+
       ![](assets/meta_cfg_template.png)
 
 
 
-* **Atualização para melhorias** da Fast Merge. Adicione parâmetros ou altere valores aos seguintes arquivos de configuração para aproveitar as melhorias de velocidade na Análise de big data durante uma transformação.
+* **Atualização para melhorias** da Fast Merge. Adicione parâmetros ou altere valores aos seguintes arquivos de configuração para aproveitar as melhorias de velocidade na Data Workbench durante uma transformação.
 
    * **Communications.cfg** ([!DNL E:\Server\Components\Communications.cfg])
 
@@ -170,29 +175,23 @@ Profiles - Current\DataWorkBench\
       ```
 
       >[!NOTE]
-      >    
-      >    
-      >    * Para aproveitar os aprimoramentos de Fast Merge, verifique se você tem pelo menos 8 GB de RAM por DPU.
-      >    * O Intervalo de salvamento, a duração entre o conjunto de dados salva, pode precisar ser reduzido se os novos parâmetros do Modo de processamento de log forem aplicados. Como a Transformação será concluída mais rapidamente, o arquivo de estado do conjunto de dados conterá mais dados entre Salvar intervalos em comparação com as versões anteriores.
-         >    
-         >    
-         >      
+      >
+      >* Para aproveitar os aprimoramentos de Fast Merge, verifique se você tem pelo menos 8 GB de RAM por DPU.
+      >* O Intervalo de salvamento, a duração entre o conjunto de dados salva, pode precisar ser reduzido se os novos parâmetros do Modo de processamento de log forem aplicados. Como a Transformação será concluída mais rapidamente, o arquivo de estado do conjunto de dados conterá mais dados entre Salvar intervalos em comparação com as versões anteriores.
 
-         **É recomendável reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**— o intervalo de salvamento padrão é de 3600 segundos (1 hora). (Se essa linha precisar ser adicionada ao [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
-         >    
-         >      
-         ```
-         >          Save Interval (sec) = int: 1800
-         >      ```
-
-      >    * É recomendável que os novos parâmetros do Modo de Processamento de Log não sejam aplicados a um conjunto de dados configurado com uma **CrossRows** usando a operação **All** . Com essas configurações, o uso de memória para essa operação pode se tornar muito grande para o ambiente.
+      >
+      >  **É recomendável reduzir a configuração Salvar intervalo para 1800 segundos (30 minutos)**— o intervalo de salvamento padrão é de 3600 segundos (1 hora). (Se essa linha precisar ser adicionada ao [!DNL Log Processing Mode.cfg], observe que há dois (2) espaços à esquerda).
+      >
+      >  
+      ```
+      >      Save Interval (sec) = int: 1800
+      >  ```
+      >
+      >  * É recomendável que os novos parâmetros do Modo de Processamento de Log não sejam aplicados a um conjunto de dados configurado com uma **CrossRows** usando a operação **All** . Com essas configurações, o uso de memória para esta operação pode se tornar muito grande para o ambiente.
 
 
 
-
-
-
-* **Atualização** de integração do Adobe Target com DWB. Um novo arquivo de exportação [!DNL ExportIntegration.exe]substitui o [!DNL TnTSend.exe] arquivo existente no Insight Server ( [!DNL E:\Server\Scripts\TnTSend.exe]). Esse novo arquivo de exportação oferece suporte à integração e coordenação do Adobe Target com o novo Perfil principal de marketing (MMP) e o Adobe Audience Manager.
+* **Atualização** de integração do Adobe Target com DWB. Um novo arquivo de exportação [!DNL ExportIntegration.exe]substitui o [!DNL TnTSend.exe] arquivo existente no Insight Server ( [!DNL E:\Server\Scripts\TnTSend.exe]). Este novo arquivo de exportação suporta integração e coordenação da Adobe Target com o novo Perfil de Marketing Principal (MMP) e Adobe Audience Manager.
 
    Você precisará atualizar os seguintes comandos para exportações do Adobe Target.
 
@@ -213,14 +212,14 @@ Profiles - Current\DataWorkBench\
    >
    >Você também pode tentar o seguinte para utilizar o processo de exportação antigo:
 
-   >    * Crie uma nova exportação do Test and Target na estação de trabalho.
-   >* Modifique a exportação antiga do Test e Target encontrada em Server/Profiles/`<your profile>`/Export.
+   >    * Crie um novo teste e exportação de Público alvo na estação de trabalho.
+   >* Modifique a antiga exportação de teste e Público alvo encontrada em Server/Perfis/`<your profile>`/Export.
 
 
-* **Atualize o perfil do Adobe SC.** As alterações no [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no [!DNL Decoding Instructions.cfg] arquivo associado.
+* **Atualize o perfil Adobe SC.** As alterações no [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no [!DNL Decoding Instructions.cfg] arquivo associado.
 
    >[!NOTE]
-   Se o seu perfil do Adobe SC incluir um [!DNL Decoding Instructions.cfg] arquivo personalizado, você precisará incluir um [!DNL DelimitedDecoder] parâmetro ao seu arquivo personalizado.
+   Se o perfil Adobe SC incluir um arquivo personalizado, será necessário incluir um [!DNL Decoding Instructions.cfg] [!DNL DelimitedDecoder] parâmetro ao arquivo personalizado.
 
    ```
    0 = DelimitedDecoder: 
@@ -241,7 +240,7 @@ Profiles - Current\DataWorkBench\
 
    Depois que o servidor for atualizado, o cliente poderá atualizar automaticamente se o [!DNL Insight.cfg] arquivo estiver configurado corretamente:
 
-   1. Edite o [!DNL Insight.cfg] arquivo.
+   1. Edit the [!DNL Insight.cfg] file.
 
       ```
       Update Software = bool: true
@@ -252,10 +251,10 @@ Profiles - Current\DataWorkBench\
    1. Saia e inicie o cliente.
    1. Conecte-se ao perfil.
 
-      O cliente atualizará automaticamente para o Análise de big data 6.3.
+      O cliente atualizará automaticamente para a Data Workbench 6.3.
 
    1. Saia do cliente.
-   1. Editar  [!DNL Insight.cfg]
+   1. Editar [!DNL Insight.cfg]
 
       * Alteração [!DNL Proxy Password = string:]
 
@@ -278,7 +277,7 @@ Profiles - Current\DataWorkBench\
    * A modificação de senha deve ser executada no cliente somente devido ao fato de as senhas serem salvas no Cofre de Credenciais do Windows.
 
 
-* **Recomendação**: **Novos Temas do Windows Aero. ** Atualize a aparência do seu aplicativo cliente usando os Temas do Windows Aero.
+* **Recomendação**: **Novos Temas Aero do Windows. ** Atualize a aparência do seu aplicativo cliente usando os Temas Aero do Windows.
 
 * **Recomendação: Fontes para versões** em chinês e japonês:
 
@@ -286,6 +285,7 @@ Profiles - Current\DataWorkBench\
 
    * Arial
    * SimSun
+
    Japonês:
 
    * MS Gothic
@@ -293,6 +293,7 @@ Profiles - Current\DataWorkBench\
    * MS Mincho
    * Arial
    * SimSun
+
    >[!NOTE]
    *SimSun* pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir o *MS Mincho*. Para ativar essas fontes no, [!DNL Insight.cfg]é possível adicionar esses parâmetros.
 
@@ -304,15 +305,15 @@ Profiles - Current\DataWorkBench\
 
    Essas fontes devem ser listadas no arquivo de configuração da estação de trabalho: [!DNL Insight.cfg.]
 
-**Atualizar para o Adobe Analytics Premium**
+**Atualizar para Adobe Analytics Premium**
 
-Para executar a Atribuição **de** melhor ajuste na Análise de big data, você precisa receber novos certificados do Adobe ClientCare para o cliente, servidor e servidor de relatório (arquivos .pem) para oferecer suporte ao Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
+Para executar a Atribuição **de** melhor ajuste na Data Workbench, você precisa receber novos certificados do Adobe ClientCare para seu Cliente, Servidor e Servidor de relatórios (arquivos .pem) para suportar o Adobe Analytics Premium. Cada um dos novos certificados terá este parâmetro:
 
 ```
 Product = Premium
 ```
 
-O pacote Premium está disponível para download **[!UICONTROL Software and Docs]** na guia **[!UICONTROL Getting Started]** na área de trabalho **Perfis e arquivos de pesquisa** . Navegue até `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Depois que o perfil **Premium** for carregado no servidor, você precisará adicionar um parâmetro *Premium* ao seu [!DNL Profile.cfg] arquivo personalizado. Isso permite que seu perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
+O pacote Premium está disponível para download **[!UICONTROL Software and Docs]** na guia **[!UICONTROL Getting Started]** na área de trabalho de arquivos de pesquisa e **Perfis** . Navigate to `Profiles - Current\DataWorkBench\<language>\Data WorkBench_6.30-en-us\Premium_6.30_en-us.zip`.  Depois que o perfil **Premium** for carregado no servidor, será necessário adicionar um parâmetro *Premium* ao seu [!DNL Profile.cfg] arquivo personalizado. Isso permite que seu perfil personalizado inclua menus, visualizações e espaços de trabalho como parte do Adobe Analytics Premium.
 
 ## Erros corrigidos {#section-e1e3df3da3594987a325344cd5e8b855}
 
@@ -325,12 +326,12 @@ O pacote Premium está disponível para download **[!UICONTROL Software and Docs
 
 * Os usuários das placas gráficas **** AMD Radeon™ devem atualizar para os drivers gráficos mais recentes. Algumas versões anteriores do driver alegam que são compatíveis com o openGL 3.2, mas são inconsistentes.
 * A saída gerada pela configuração de Exportação **de** segmento sem uma declaração de cabeçalho pode resultar em um cabeçalho bogus exibido no início do arquivo que está em conflito com o primeiro conjunto de linhas.
-* **Adicionar dimensões** mostra somente as dimensões *estendidas*. A solução alternativa é usar a ferramenta **Localizadores** para arrastar dimensões para tabelas.
+* **Adicionar Dimension** mostra apenas os Dimension ** estendidos. A solução alternativa é usar a ferramenta **Localizadores** para arrastar dimensões para tabelas.
 
 * Quando a Visualização de gráfico de dispersão 3D inclui avisos, o zoom pode exibir os gráficos fora da borda da visualização. Para contornar esse problema, faça zoom no Gráfico de dispersão 3D primeiro e, em seguida, adicione avisos à sua visualização.
 * O uso da estação de trabalho na sessão Área de trabalho remota travará ao renomear espaços de trabalho.
 * Listar item
-* **Os arquivos de exportação do segmento herdado são enviados com aspas** duplas, mesmo se o arquivo de exportação não contiver aspas no campo Formato de saída.
+* **Os arquivos de exportação do segmento herdado são enviados com aspas** de duplo mesmo se o arquivo de exportação não contiver aspas no campo Formato de saída.
 
    *Solução*: Adicione essas três linhas ao arquivo .export. A definição desses valores não acionará uma integração MMP (como outros campos de configuração são obrigatórios), mas ignorará as fugas automáticas indesejadas.
 
@@ -341,4 +342,4 @@ O pacote Premium está disponível para download **[!UICONTROL Software and Docs
                                        the current export]
    ```
 
-   (A primeira linha tem dois (2) espaços à esquerda e as linhas seguintes quatro (4). A Dimensão da saída da exportação atual precisa ser referenciada na [!DNL MMP Visitor ID Field].)
+   (A primeira linha tem dois (2) espaços à esquerda e as linhas seguintes quatro (4). O Dimension da saída da exportação atual precisa ser referenciado no [!DNL MMP Visitor ID Field].)
