Updating Old File for core commit 7e8b228c545fafcf8183d7fe68102cadde138146

--- a/help/home/c-release-notes-insight/c-6-3/c-6-3.md
+++ b/help/home/c-release-notes-insight/c-6-3/c-6-3.md
@@ -3,7 +3,7 @@ description: As notas de versão da Data Workbench 6.3 incluem novos recursos, r
 title: Notas de versão do Data Workbench 6.3
 uuid: a8db4c11-f821-4d14-90d4-5194e58c50c1
 translation-type: tm+mt
-source-git-commit: 98452ba81d71db65c75e3d07712eefa18c003f53
+source-git-commit: 7e8b228c545fafcf8183d7fe68102cadde138146
 workflow-type: tm+mt
 source-wordcount: '1687'
 ht-degree: 6%
@@ -211,15 +211,16 @@ Profiles - Current\DataWorkBench\
    >
    >
    >Você também pode tentar o seguinte para utilizar o processo de exportação antigo:
-
-   >    * Crie um novo teste e exportação de Público alvo na estação de trabalho.
+   >    
+   >* Crie um novo teste e exportação de Público alvo na estação de trabalho.
    >* Modifique a antiga exportação de teste e Público alvo encontrada em Server/Perfis/`<your profile>`/Export.
 
 
 * **Atualize o perfil Adobe SC.** As alterações no [!DNL Exclude Hit.cfg] arquivo exigem que um campo seja declarado no [!DNL Decoding Instructions.cfg] arquivo associado.
 
    >[!NOTE]
-   Se o perfil Adobe SC incluir um arquivo personalizado, será necessário incluir um [!DNL Decoding Instructions.cfg] [!DNL DelimitedDecoder] parâmetro ao arquivo personalizado.
+   >
+   >Se o perfil Adobe SC incluir um arquivo personalizado, será necessário incluir um [!DNL Decoding Instructions.cfg] [!DNL DelimitedDecoder] parâmetro ao arquivo personalizado.
 
    ```
    0 = DelimitedDecoder: 
@@ -270,11 +271,16 @@ Profiles - Current\DataWorkBench\
       * Insira o endereço proxy para todos os servidores e Salvar.
 
          >[!IMPORTANT]
-         O Endereço proxy e a Senha do proxy devem ser inseridos e salvos no cliente.
+         >
+         >O Endereço proxy e a Senha do proxy devem ser inseridos e salvos no cliente.
    1. Conecte-se ao perfil.
    >[!NOTE]
-   * Siga a sequência exata de atualização para evitar um bloqueio de conta. Se a conta estiver bloqueada, execute todas as alterações necessárias na sequência exata listada, salve o trabalho e saia do cliente. Aguarde o bloqueio ser lançado (cerca de 45 minutos) e inicie o cliente novamente.
-   * A modificação de senha deve ser executada no cliente somente devido ao fato de as senhas serem salvas no Cofre de Credenciais do Windows.
+   >
+   >
+   >    
+   >    
+   >    * Siga a sequência exata de atualização para evitar um bloqueio de conta. Se a conta estiver bloqueada, execute todas as alterações necessárias na sequência exata listada, salve o trabalho e saia do cliente. Aguarde o bloqueio ser lançado (cerca de 45 minutos) e inicie o cliente novamente.
+   >    * A modificação de senha deve ser executada no cliente somente devido ao fato de as senhas serem salvas no Cofre de Credenciais do Windows.
 
 
 * **Recomendação**: **Novos Temas Aero do Windows. ** Atualize a aparência do seu aplicativo cliente usando os Temas Aero do Windows.
@@ -295,7 +301,8 @@ Profiles - Current\DataWorkBench\
    * SimSun
 
    >[!NOTE]
-   *SimSun* pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir o *MS Mincho*. Para ativar essas fontes no, [!DNL Insight.cfg]é possível adicionar esses parâmetros.
+   >
+   >*SimSun* pode ser usado para chinês e japonês. Se estiver tentando gravar caracteres de meio byte em japonês, também é necessário incluir o *MS Mincho*. Para ativar essas fontes no, [!DNL Insight.cfg]é possível adicionar esses parâmetros.
 
    ```
    0 = string: Arial 
