--- a/help/home/c-release-notes-insight/c-release-notes-previous/c-6-0/c-6-0.md
+++ b/help/home/c-release-notes-insight/c-release-notes-previous/c-6-0/c-6-0.md
@@ -1,18 +1,19 @@
 ---
-description: A Análise de big data 6.0 incluiu os seguintes recursos.
-solution: Analytics
-title: Recursos do Análise de big data 6.0
-topic: Data workbench
+description: A Data Workbench 6.0 incluiu os seguintes recursos.
+title: Recursos do Data Workbench 6.0
 uuid: 3837e35f-2e63-4543-a87c-25d3f6f927a0
 translation-type: tm+mt
-source-git-commit: aec1f7b14198cdde91f61d490a235022943bfedb
+source-git-commit: d9df90242ef96188f4e4b5e6d04cfef196b0a628
+workflow-type: tm+mt
+source-wordcount: '24'
+ht-degree: 25%
 
 ---
 
 
-# Recursos do Análise de big data 6.0{#data-workbench-features}
+# Recursos do Data Workbench 6.0{#data-workbench-features}
 
-A Análise de big data 6.0 incluiu os seguintes recursos.
+A Data Workbench 6.0 incluiu os seguintes recursos.
 
 * [Visualização de funil](/help/home/c-get-started/c-analysis-vis/c-funnel-visualization/c-funnel-visualization.md)
 * [Cluster do visitante](/help/home/c-get-started/c-analysis-vis/c-visitor-cluster/c-visitor-cluster.md)
