Updating Old File for core commit d9df90242ef96188f4e4b5e6d04cfef196b0a628

--- a/help/home/c-release-notes-insight/c-release-notes-insight-61/c-6-1/c-6-1.md
+++ b/help/home/c-release-notes-insight/c-release-notes-insight-61/c-6-1/c-6-1.md
@@ -1,16 +1,17 @@
 ---
-description: A Análise de big data 6.1 inclui os seguintes recursos.
-solution: Analytics
-title: Recursos do Análise de big data 6.1
-topic: Data workbench
+description: A Data Workbench 6.1 inclui os seguintes recursos.
+title: Recursos do Data Workbench 6.1
 uuid: 12c51d3a-2ffe-4eee-8e26-02da9a864bd8
 translation-type: tm+mt
-source-git-commit: aec1f7b14198cdde91f61d490a235022943bfedb
+source-git-commit: d9df90242ef96188f4e4b5e6d04cfef196b0a628
+workflow-type: tm+mt
+source-wordcount: '18'
+ht-degree: 0%
 
 ---
 
 
-# Recursos do Análise de big data 6.1{#data-workbench-features}
+# Recursos do Data Workbench 6.1{#data-workbench-features}
 
-A Análise de big data 6.1 inclui os seguintes recursos.
+A Data Workbench 6.1 inclui os seguintes recursos.
 
